--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,12 +12,28 @@
 }
 
 body {
-  background: #131313;
+  position: relative;
   color: #fff;
 
   /* temporary */
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
+
+  background-image: url(../icons/noise-bg.png);
+  background-position: left left;
+  background-blend-mode: hard-light;
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-color: #000;
+  opacity: 0.92;
 }
 
 main {
@@ -57,6 +73,7 @@ h2 {
 }
 
 .recent-work {
+  margin-right: 60px;
   width: var(--recent-work-width);
 }
 
@@ -80,6 +97,7 @@ h2 {
 }
 
 .recent-work__preview {
+  cursor: pointer;
   width: var(--recent-work-width);
 }
 
@@ -94,6 +112,7 @@ h2 {
 
 .all-works > span {
   margin-right: 70px;
+  transition: color .21s ease-in-out;
 }
 
 .all-works__arrow {
@@ -117,8 +136,12 @@ h2 {
   transform: translateX(110%);
 }
 
+.all-works:hover > span {
+  color: #F42828;
+}
+
 #our-service {
-  margin-bottom: 100px;
+  padding-bottom: 100px;
 }
 
 #our-service > h2 {
@@ -135,6 +158,10 @@ h2 {
   border-bottom: 1px solid #3A3A3A;
 }
 
+.our-serveces_service:hover > .service__description {
+  color: #F42828;
+}
+
 .service__number {
   color: #959595;
   font-family: 'Inter', sans-serif;
@@ -147,6 +174,7 @@ h2 {
   text-transform: uppercase;
   font-size: 1.5em; /* 24px */
   color: #DFDFDF;
+  transition: color .21s ease-in-out;
 }
 
 .our-serveces_service > img {
