--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,8 +7,9 @@
   margin: 0;
 }
 
-
-::-webkit-scrollbar{display: none;}
+::-webkit-scrollbar {
+  display: none;
+}
 
 :root {
   --recent-work-width: 540px;
@@ -57,12 +58,88 @@ h2 {
   font-size: 5.3125em; /* 85px */
 }
 
-#home {
+
+/* header */
+
+.main-header {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
 }
 
+.main-header canvas {
+  position: absolute;
+  width: 100%!important;
+  height: 100%!important;
+}
+
+.header__team-name {
+  font-size: 5em;
+  z-index: 1;
+}
+
+.main-header__nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  padding: 35px 60px 0;
+
+  z-index: 2;
+}
+
+.main-header__nav > * {
+  width: 33%;
+}
+
+.nav__logo {
+  font-size: 1.5em; /* 24px */
+}
+
+.nav__links {
+  display: flex;
+  list-style-type: none;
+}
+
+.nav__links > li {
+  text-transform: uppercase;
+  margin-right: 90px;
+  font-size: 0.875em; /* 14px */
+}
+
+.nav__to-auth {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.nav__to-auth > a {
+  padding: 10px 25px;
+  text-transform: uppercase;
+  border: 1px solid #656565;
+  transition: all .21s ease-out;
+}
+
+.nav__to-auth > a:hover {
+  border: 1px solid #E9E960;
+}
+
+.nav__to-auth > a:first-child {
+  margin-right: 10px;
+}
+
+
+/* main */
+
 #recent-works {
-  margin-bottom: 400px;
+  margin: 100px 0 400px;
 }
 
 #recent-works > .container {
@@ -75,19 +152,54 @@ h2 {
   row-gap: 125px;
 }
 
-.Name{
-  position: absolute;
-  top: 7%;
-  left: 38%;
-  font-size: 5em;
-  z-index: 1;
-  transform-style: preserve-3d;
-  transform: translateZ(20px);
-}
-
 .recent-work {
   margin-right: 60px;
   width: var(--recent-work-width);
+  height: 655px;
+  overflow: hidden;
+  position: relative;
+}
+
+.recent-work:hover > a {
+  position: relative;
+}
+
+.recent-work:hover > a > img {
+  transition: transform 0.74s ease-out;
+  transform-origin: top;
+}
+
+.recent-work:hover > a:hover > img {
+  transform: scale(1.05);
+}
+
+.recent-work__arrow {
+  width: 120px;
+  height: 120px;
+
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+
+  bottom: 0px;
+  left: 30px;
+  color: #3A3A3A;
+  font-size: 2em;
+  line-height: 1;
+
+  z-index: 1;
+  border-radius: 50%;
+  background: #FFFF80;
+
+  opacity: 0;
+  transition: all .31s ease-in-out;
+  transform: translateY(-70%);
+}
+
+.recent-work:hover > a:hover > .recent-work__arrow {
+  opacity: 1;
+  transform: translateY(-90%);
 }
 
 .recent-work__header {
