--- a/src/views/login.html
+++ b/src/views/login.html
@@ -15,11 +15,11 @@
     <form class="login-form">
       <h1>Login</h1>
       <div class="input__container">
-        <input minlength="1" class="input_primary" type="text" />
+        <input minlength="1" class="input_primary" type="text" required />
         <label>User name</label>
       </div>
       <div class="input__container">
-        <input minlength="6" class="input_primary" type="password" />
+        <input minlength="6" class="input_primary" type="password" required />
         <label>Password</label>
       </div>
 
