--- a/src/views/signup.html
+++ b/src/views/signup.html
@@ -15,19 +15,19 @@
     <form class="login-form">
       <h1>sign up</h1>
       <div class="input__container">
-        <input minlength="1" class="input_primary" type="text" />
+        <input minlength="1" class="input_primary" type="text" required />
         <label>User name</label>
       </div>
       <div class="input__container">
-        <input class="input_primary" type="email" value="" />
+        <input class="input_primary" type="email" required />
         <label>E-mail</label>
       </div>
       <div class="input__container">
-        <input minlength="6" class="input_primary" type="password" />
+        <input minlength="6" class="input_primary" type="password" required />
         <label>Password</label>
       </div>
       <div class="input__container">
-        <input minlength="6" class="input_primary" type="password" />
+        <input minlength="6" class="input_primary" type="password" required />
         <label>Repeat password</label>
       </div>
 
