--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -32,7 +32,7 @@ h1 {
   margin-bottom: 40px;
 }
 
-.login-form {
+.auth-form {
   position: relative;
   background: #1B1B1B;
   border: 1px solid #626262;
@@ -41,7 +41,7 @@ h1 {
   padding: 50px 60px;
 }
 
-.login-form .button_primary {
+.auth-form .button_primary {
   margin-top: 30px;
   width: 100%;
 }
