--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+@import './vars.css';
 
 * {
   box-sizing: border-box;
@@ -9,10 +10,6 @@
 
 ::-webkit-scrollbar {
   display: none;
-}
-
-:root {
-  --recent-work-width: 540px;
 }
 
 body {
@@ -47,6 +44,7 @@ main {
 a {
   text-decoration: none;
   color: #fff;
+  transition: color .18s ease-out;
 }
 
 h1, h2, h3 {
@@ -115,6 +113,10 @@ h2 {
   font-size: 0.875em; /* 14px */
 }
 
+.nav__links > li:hover > a {
+  color: var(--primary-color);
+}
+
 .nav__to-auth {
   display: flex;
   justify-content: flex-end;
@@ -128,7 +130,7 @@ h2 {
 }
 
 .nav__to-auth > a:hover {
-  border: 1px solid #E9E960;
+  border: 1px solid var(--primary-color);
 }
 
 .nav__to-auth > a:first-child {
@@ -245,7 +247,7 @@ h2 {
   justify-content: center;
   align-items: center;
 
-  border: 1px solid #E02929;
+  border: 1px solid var(--primary-color);
   border-radius: 50%;
   width: 110px;
   height: 110px;
@@ -262,7 +264,7 @@ h2 {
 }
 
 .all-works:hover > span {
-  color: #F42828;
+  color: var(--primary-color);
 }
 
 #our-service {
@@ -283,10 +285,6 @@ h2 {
   border-bottom: 1px solid #3A3A3A;
 }
 
-.our-serveces_service:hover > .service__description {
-  color: #F42828;
-}
-
 .service__number {
   color: #959595;
   font-family: 'Inter', sans-serif;
@@ -299,11 +297,30 @@ h2 {
   text-transform: uppercase;
   font-size: 1.5em; /* 24px */
   color: #DFDFDF;
-  transition: color .21s ease-in-out;
+  transition: all .21s ease-in-out;
 }
 
-.our-serveces_service > img {
+.service__arrow {
   position: absolute;
   right: 35px;
-  transition: right .21s ease-in-out;
+
+  height: 100%;
+  width: 60px;
+
+  background-image: url("../icons/our-projects/our-service-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center right;
+  transition: all 0.21s ease-in-out;
+
+  transform-origin: right;
+}
+
+.our-serveces_service:hover > .service__description {
+  color: var(--primary-color);
+  padding-left: 35px;
+}
+
+.our-serveces_service:hover > .service__arrow {
+  right: 25px;
+  background-image: url("../icons/our-projects/our-service-arrow-active.svg");
 }
