--- a/src/views/login.html
+++ b/src/views/login.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../styles/login.css">
+    <link rel="stylesheet" href="../styles/auth.css">
     <link rel="stylesheet" href="../styles/primary-styles.css">
+
+    <script defer src="../scripts/main.js"></script>
 
     <title>Login</title>
   </head>
   <body>
 
-    <form class="login-form">
+    <form class="auth-form">
       <h1>Login</h1>
       <div class="input__container">
         <input minlength="1" class="input_primary" type="text" required />
