--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -79,7 +79,27 @@ h2 {
 }
 
 .header__team-name {
+  display: flex;
+  justify-self: center;
+  align-items: center;
   font-size: 5em;
+  z-index: 1;
+}
+
+.header__teamLogo{
+  display: flex;
+  position: absolute;
+  left: 0;
+  width: 80vw;
+  transform: translateX(calc(50vw - 80vw/2));
+  margin: 0 auto;
+}
+
+.header__subtitle{
+  float: left;
+  font-size: 0.8em;
+  margin: 0 auto;
+  font-weight: bold;
   z-index: 1;
 }
 
@@ -96,7 +116,7 @@ h2 {
   width: 100%;
   padding: 15px 60px;
 
-  background: #121212;
+  background: rgba(18, 18, 18, .9);
 
   z-index: 2;
 }
@@ -331,3 +351,109 @@ h2 {
   right: 25px;
   background-image: url("../icons/our-projects/our-service-arrow-active.svg");
 }
+
+#chat{
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  bottom: 5%;
+  right: -25%;
+  overflow: hidden;
+  width: 20vw;
+  height: 30vw;
+  background-color: var(--primary-color);
+  border-radius: 0 50px 0 50px;
+  border: 0;
+  box-shadow: 0px 0px 50px rgba(255, 174, 0, 0.25);
+  transition: 1s ease-in-out;
+  z-index: 1;
+}
+
+.chat__logo{
+  width: 22%;
+  margin: 6%;
+}
+
+.chat__back{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background: white;
+}
+
+.chat__message__win{
+  display: flex;
+  overflow: hidden;
+  width: 100%;
+  height: 87%;
+}
+
+.chat__input{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 13%;
+  width: 100%;
+  border-top: 1px gray solid;
+  padding: 3% 5% 5% 10%;
+}
+
+.chat__message__win{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.message_user{
+  width: 100%;
+  height: 15%;
+  margin: 4% 0% 5% -4%;
+}
+
+.message_bot{
+  width: 100%;
+  height: 15%;
+  margin: -4% 0% 5% 4%;
+}
+
+.message_user_box{
+  width: 70%;
+  float: right;
+}
+
+.message_bot_box{
+  width: 70%;
+  float: left;
+}
+
+.input__message{
+  background: transparent;
+  border: 0;
+  width: 80%;
+}
+
+.input__message:focus-within{
+  outline: 0; 
+  outline-offset: 0;
+}
+
+.message__button{width: 12%;}
+
+.message__button:hover{cursor: pointer;}
+
+.chat__button{
+  position: fixed;
+  bottom: 5%;
+  right: 5%;
+  width: 5vw;
+  height: 5vw;
+  background-color: var(--primary-color);
+  border-radius: 50%;
+  border: 0;
+  box-shadow: 0px 0px 50px rgba(255, 174, 0, 0.25);
+  transition: 1s ease-in-out;
+}
+
+.chat__button:hover{cursor: pointer;}
