--- a/src/views/allworks.html
+++ b/src/views/allworks.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/src/styles/normalize.css">
-    <link rel="stylesheet" href="/src/styles/main.css">
-    <link rel="stylesheet" href="/src/styles/allworks.css">
+    <link rel="stylesheet" href="../styles/normalize.css">
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/allworks.css">
 
-    <script defer src="/src/scripts/main.js"></script>
+    <script defer src="../scripts/main.js"></script>
 
     <title>All Works</title>
 </head>
@@ -30,11 +30,11 @@
         </ul>
 
         <div class="nav__to-auth">
-          <a href="/src/views/login.html">Log in</a>
-          <a href="/src/views/signup.html">sign up</a>
+          <a href="./login.html">Log in</a>
+          <a href="./signup.html">sign up</a>
         </div>
       </nav>
-    <section id="recent-works" style="margin-top: 0; padding: 0 10%;">
+    <section id="recent-works" style="margin: 0; padding: 1% 10%;">
         <h2 style="padding-top: 10%;">our works</h2>
         <div class="filter_works">
             <div>all</div>
@@ -48,7 +48,7 @@
               <span class="recent-work__service-type">site</span>
             </header>
             <a href="#">
-              <img class="recent-work__preview" src="/src/icons/our-projects/sample1.png" alt="sample1" />
+              <img class="recent-work__preview" src="../icons/our-projects/sample1.png" alt="sample1" />
               <div class="recent-work__arrow">
                 →
               </div>
@@ -60,7 +60,7 @@
               <span class="recent-work__service-type">promotion</span>
             </header>
             <a href="#">
-              <img class="recent-work__preview" src="/src/icons/our-projects/sample2.png" alt="sample2" />
+              <img class="recent-work__preview" src="../icons/our-projects/sample2.png" alt="sample2" />
               <div class="recent-work__arrow">
                 →
               </div>
@@ -72,7 +72,7 @@
               <span class="recent-work__service-type">site</span>
             </header>
             <a href="#">
-              <img class="recent-work__preview" src="/src/icons/our-projects/sample3.png" alt="sample3" />
+              <img class="recent-work__preview" src="../icons/our-projects/sample3.png" alt="sample3" />
               <div class="recent-work__arrow">
                 →
               </div>
@@ -84,19 +84,13 @@
               <span class="recent-work__service-type">promotion</span>
             </header>
             <a href="#">
-              <img class="recent-work__preview" src="/src/icons/our-projects/sample4.png" alt="sample4" />
+              <img class="recent-work__preview" src="../icons/our-projects/sample4.png" alt="sample4" />
               <div class="recent-work__arrow">
                 →
               </div>
             </a>
           </div>
         </div>
-        <a class="all-works" href="/src/views/allworks.html">
-          <span>all works</span>
-          <div class="all-works__arrow">
-            <img src="/src/icons/our-projects/right-arrow.svg" alt="right-arrow" />
-          </div>
-        </a>
       </section>
     
 </body>
