Add adaptive styles for main page

--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -2,5 +2,5 @@
   --primary-color: #F8B118;
   --primary-hover-color: #D69D25;
   --danger-color: #F33E3E;
-  --recent-work-width: 540px;
+  --recent-work-width: 45%;
 }
