--- a/src/views/allworks.html
+++ b/src/views/allworks.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/allworks.css">
 
+    <!-- <script defer src="../scripts/SmoothScroll.js"></script> -->
     <script defer src="../scripts/main.js"></script>
 
     <title>All Works</title>
 </head>
 <body>
+
     <nav class="main-header__nav">
-        <a class="nav__logo" href="#">S&C</a>
+        <a class="nav__logo" href="../../index.html">S&C</a>
 
         <ul class="nav__links">
           <li class="nav__link">
@@ -33,7 +35,7 @@
           <a href="./login.html">Log in</a>
           <a href="./signup.html">sign up</a>
         </div>
-      </nav>
+    </nav>
     <section id="recent-works" style="margin: 0; padding: 1% 10%;">
         <h2 style="padding-top: 10%;">our works</h2>
         <div class="filter_works">
@@ -91,7 +93,7 @@
             </a>
           </div>
         </div>
-      </section>
-    
+    </section>
+
 </body>
 </html>
