--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -93,6 +93,7 @@ h2 {
   width: 80vw;
   transform: translateX(calc(50vw - 80vw/2));
   margin: 0 auto;
+  user-select: none;
 }
 
 .header__subtitle{
@@ -100,6 +101,7 @@ h2 {
   font-size: 0.8em;
   margin: 0 auto;
   font-weight: bold;
+  padding: 0 30px;
   z-index: 1;
 }
 
@@ -117,12 +119,7 @@ h2 {
   padding: 15px 60px;
 
   background: rgba(18, 18, 18, .9);
-
   z-index: 2;
-}
-
-.main-header__nav > * {
-  width: 33%;
 }
 
 .nav__logo {
@@ -136,8 +133,12 @@ h2 {
 
 .nav__links > li {
   text-transform: uppercase;
-  margin-right: 90px;
+  margin-right: clamp(10px, 4vw, 90px);
   font-size: 0.875em; /* 14px */
+}
+
+.nav__links > li:last-child {
+  margin-right: 0;
 }
 
 .nav__links > li:hover > a {
@@ -164,6 +165,91 @@ h2 {
   margin-right: 10px;
 }
 
+.nav__menu-button,
+.nav__burger-menu {
+  display: none;
+}
+
+.nav__menu-button {
+  cursor: pointer;
+}
+
+.nav__burger-menu {
+  display: flex;
+  transform: translateX(100%);
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+
+  padding: 0 25px;
+  background: #000000;
+
+  transition: transform .43s ease-out;
+}
+
+.burger-menu_active {
+  transform: translateX(0%);
+}
+
+.burger-menu__links {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  margin-bottom: 100px;
+}
+
+.burger-menu__link {
+  cursor: pointer;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #3A3A3A;
+  margin-bottom: 25px;
+}
+
+.burger-menu__link:last-child {
+  padding-bottom: 0;
+  border-bottom: none;
+  margin-bottom: 0;
+}
+
+.burger-menu__link > a {
+  font-size: 20px;
+}
+
+.burger-menu__link:hover > a {
+  color: var(--primary-color);
+}
+
+.burger-menu__close-button {
+  cursor: pointer;
+  position: absolute;
+  right: clamp(10px, 5%, 30px);
+  top: clamp(10px, 3%, 30px);
+
+  width: 20px;
+  height: 20px;
+}
+
+.burger-menu__to-auth {
+  display: flex;
+  justify-content: space-between;
+}
+
+.burger-menu__to-auth > a {
+  padding: 20px 45px;
+  border: 1px solid var(--primary-color);
+  border-radius: 5px;
+}
+
+.burger-menu__to-auth > .to-login {
+  color: #000;
+  background: var(--primary-color);
+}
+
 
 /* main */
 
@@ -182,29 +268,29 @@ h2 {
 }
 
 .recent-work {
-  margin-right: 60px;
   width: var(--recent-work-width);
-  height: 655px;
+  height: auto;
   overflow: hidden;
   position: relative;
 }
 
-.recent-work:hover > a {
+.recent-work > a {
   position: relative;
 }
 
-.recent-work:hover > a > img {
-  transition: transform 0.74s ease-out;
-  transform-origin: top;
-}
-
-.recent-work:hover > a:hover > img {
+.recent-work > a:hover > img {
+  transform-origin: center;
   transform: scale(1.05);
 }
 
+.recent-work > a:hover > .recent-work__arrow {
+  opacity: 1;
+  transform: translateY(-30%);
+}
+
 .recent-work__arrow {
-  width: 120px;
-  height: 120px;
+  width: 110px;
+  height: 110px;
 
   display: flex;
   position: absolute;
@@ -219,16 +305,11 @@ h2 {
 
   z-index: 1;
   border-radius: 50%;
-  background: #FFFF80;
+  background: var(--primary-color);
 
   opacity: 0;
-  transition: all .31s ease-in-out;
-  transform: translateY(-70%);
-}
-
-.recent-work:hover > a:hover > .recent-work__arrow {
-  opacity: 1;
-  transform: translateY(-90%);
+  transition: all .41s ease-in-out;
+  transform: translateY(0%);
 }
 
 .recent-work__header {
@@ -252,7 +333,8 @@ h2 {
 
 .recent-work__preview {
   cursor: pointer;
-  width: var(--recent-work-width);
+  width: 100%;
+  transition: transform 0.74s ease-out;
 }
 
 .all-works {
@@ -273,6 +355,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 
   border: 1px solid var(--primary-color);
   border-radius: 50%;
@@ -283,6 +366,8 @@ h2 {
 
 .all-works__arrow > img {
   position: absolute;
+  width: 50%;
+  height: 50%;
   transition: transform .21s ease-in-out;
 }
 
@@ -435,7 +520,7 @@ h2 {
 }
 
 .input__message:focus-within{
-  outline: 0; 
+  outline: 0;
   outline-offset: 0;
 }
 
