--- a/src/styles/adaptive.css
+++ b/src/styles/adaptive.css
@@ -1,4 +1,12 @@
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1200px) {
+  #chat{
+    width: 25vw;
+    height: 35vw;
+    border-radius: 0 40px 0 40px;
+    right: -100%;
+  }
+}
+@media screen and (max-width: 1000px) { 
   main {
     margin: 0 70px;
   }
@@ -41,6 +49,17 @@
     margin: 90px 0 50px;
     row-gap: 100px;
   }
+  #chat{
+    width: 35vw;
+    height: 45vw;
+    border-radius: 0 40px 0 40px;
+    right: -70%;
+  }
+  .chat__button{
+    width: 6vw;
+    height: 6vw;
+  }
+  
 }
 
 @media screen and (max-width: 800px) {
@@ -71,6 +90,24 @@
 
   #our-service > h2 {
     margin-bottom: 40px;
+  }
+  #chat{
+    width: 40vw;
+    height: 50vw;
+    border-radius: 0 35px 0 35px;
+    right: -60%;
+  }
+  .chat__button{
+    width: 8vw;
+    height: 8vw;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  #chat{
+    width: 45vw;
+    height: 55vw;
+    border-radius: 0 35px 0 35px;
   }
 }
 
@@ -148,6 +185,28 @@
   .burger-menu_active {
     display: flex;
   }
+  
+  #chat{
+    width: 50vw;
+    height: 70vw;
+    border-radius: 0 25px 0 25px;
+    right: -80%;
+  }
+  
+  .chat__button{
+    width: 10vw;
+    height: 10vw;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #chat{
+    width: 60vw;
+    height: 80vw;
+    border-radius: 0 30px 0 30px;
+    bottom: 3%;
+    right: -100%;
+  }
 }
 
 @media screen and (max-width: 400px) {
@@ -157,5 +216,17 @@
 
   .header__subtitle {
     font-size: 0.6em;
+  }
+  
+  #chat{
+    width: 80vw;
+    height: 110vw;
+    border-radius: 0 20px 0 20px;
+    right: -100%;
+  }
+  
+  .chat__button{
+    width: 13vw;
+    height: 13vw;
   }
 }
