--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -39,9 +39,46 @@ h1 {
 
   width: 475px;
   padding: 50px 60px;
+  margin: 0px 15px;
+}
+
+.auth-form-mobile{
+  display: none;
+  position: relative;
+  background: #1B1B1B;
+  border: 1px solid #626262;
+
+  width: 475px;
+  padding: 50px 60px;
+  margin: 0px 15px;
 }
 
 .auth-form .button_primary {
   margin-top: 30px;
   width: 100%;
 }
+
+.auth-form-mobile .button_primary {
+  margin-top: 30px;
+  width: 100%;
+}
+
+.sing_cont{
+  display: inline-flex;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  padding: 5px;
+}
+
+.sing_cont_one{
+  width: 100%;
+  transition: 1s ease-in-out;
+}
+
+.sing_cont_two{
+  width: 100%;
+  transform: translate(150%,0%);
+  transition: 1s ease-in-out;
+}
+
