--- a/src/views/login.html
+++ b/src/views/login.html
@@ -7,13 +7,57 @@
 
     <link rel="stylesheet" href="../styles/auth.css">
     <link rel="stylesheet" href="../styles/primary-styles.css">
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/adaptive.css">
 
     <script defer src="../scripts/main.js"></script>
 
     <title>Login</title>
   </head>
   <body>
+    <nav class="main-header__nav">
+      <a class="nav__logo" href="../../index.html">S&C</a>
 
+      <ul class="nav__links">
+        <li class="nav__link">
+          <a href="#recent-works">portfolio</a>
+        </li>
+        <li class="nav__link">
+          <a href="#our-service">services</a>
+        </li>
+        <li class="nav__link">
+          <a href="#our-team">team</a>
+        </li>
+      </ul>
+
+      <div class="nav__to-auth">
+        <a href="./login.html">Log in</a>
+        <a href="./signup.html">sign up</a>
+      </div>
+
+      <img class="nav__menu-button" src="../icons/our-projects/menu.svg" alt="menu" />
+
+      <div class="nav__burger-menu">
+        <img class="burger-menu__close-button" src="../icons/our-projects/exit.svg" alt="menu" />
+
+        <ul class="burger-menu__links">
+          <li class="burger-menu__link">
+            <a href="#recent-works">portfolio</a>
+          </li>
+          <li class="burger-menu__link">
+            <a href="#our-service">services</a>
+          </li>
+          <li class="burger-menu__link">
+            <a href="#our-team">team</a>
+          </li>
+        </ul>
+
+        <div class="burger-menu__to-auth">
+          <a class="to-login" href="./login.html">Log in</a>
+          <a class="to-signup" href="./signup.html">sign up</a>
+        </div>
+      </div>
+    </nav>
     <form class="auth-form">
       <h1>Log in</h1>
       <div class="input__container">
